syntax = "proto3";
package service.administrator.v1;
option go_package = "yuumi/api/service/administrator/v1;v1";

message PaginationData {
  int64 page = 1;
  int64 total = 2;
  int64 page_size = 3 [json_name = "page_size"];
  int64 page_total = 4 [json_name = "page_total"];
}

message AdministratorData {
  int64 id = 1;
  string name = 2;
  string created_at = 3 [json_name = "created_at"];
  string updated_at = 4 [json_name = "updated_at"];
  repeated AdministratorRoleData roles = 5;
}

message AdministratorRoleData {
  int64 id = 1;
  string name = 2;
  string created_at = 3 [json_name = "created_at"];
  string updated_at = 4 [json_name = "updated_at"];
}

message RoleData {
  int64 id = 1;
  string name = 2;
  string type = 3;
  int64 parent_id = 4 [json_name = "parent_id"];
  string created_at = 5 [json_name = "created_at"];
  string updated_at = 6 [json_name = "updated_at"];
}

message PermissionData {
  int64 id = 1;
  string name = 2;
  string rpc_method = 3 [json_name = "rpc_method"];
  string created_at = 4 [json_name = "created_at"];
  string updated_at = 5 [json_name = "updated_at"];
  repeated AdministratorRoleData roles = 6;
}

message NavMenuData {
  int64 id = 1;
  int64 parent_id = 2 [json_name = "parent_id"];
  string name = 3;
  string link_url = 4 [json_name = "link_url"];
  string actived_rule = 5 [json_name = "actived_rule"];
  int64 weight = 6;
  string icon = 7;
  string created_at = 8 [json_name = "created_at"];
  string updated_at = 9 [json_name = "updated_at"];
  repeated RoleData roles = 50;
}